<?xml version="1.0" encoding="utf-8"?>

<!-- emails -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/auth_hint_password"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/sign_up_button"
        style="@style/AppTheme.mybttstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_email_log_on"
        android:textColor="@android:color/black" />




    <android.support.v7.widget.AppCompatButton
        android:id="@+id/navigate_back"
        style="@style/AppTheme.mybttstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_btn_back"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/btn_reset_password"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/auth_btn_forgot_password"
        android:textAllCaps="false"
        android:clickable="true"
        android:textColor="@color/colorAccent" />
</LinearLayout>

