<?xml version="1.0" encoding="utf-8"?>
<!-- angemeldet screeen ... -->
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/idauth_choose_method_yourlogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:gravity="center"
        android:text="@string/auth_choose_method_yourlogin" />

    <include
        layout="@layout/items_maincontactlist_userelements"
        android:visibility="visible" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/log_out_button"
        style="@style/AppTheme.mybttstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_logout"
        android:text="@string/auth_signOut"
        android:visibility="gone"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/log_out_button_neuAnmelden"
        style="@style/AppTheme.mybttstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_login"
        android:text="@string/auth_new_login" />

</LinearLayout>
