<?xml version="1.0" encoding="utf-8"?><!-- registrieren... -->
<LinearLayout android:gravity="center"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.v7.widget.AppCompatEditText
            android:hint="@string/auth_email"
            android:id="@+id/register_email"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:singleLine="true" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.v7.widget.AppCompatEditText
            android:focusableInTouchMode="true"
            android:hint="@string/auth_hint_password"
            android:id="@+id/register_password"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.v7.widget.AppCompatEditText
            android:focusableInTouchMode="true"
            android:hint="@string/auth_hint_password"
            android:id="@+id/register_passwordwh"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        style="@style/AppTheme.mybttstyle"
        android:id="@+id/register_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/auth_action_sign_in_short"
        android:textColor="@android:color/black" />

    <android.support.v7.widget.AppCompatButton
        style="@style/AppTheme.mybttstyle"
        android:id="@+id/register_navigate_back"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/auth_btn_back"
        android:textColor="@android:color/black"
        android:textStyle="bold" />
</LinearLayout>
