<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:style="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/viewA"
            style="@style/AppTheme.header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/contactDetail_image"
                style="@style/AppTheme.header"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>



        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/edits_margin"
            android:layout_marginLeft="@dimen/showitem_margin"
            android:layout_marginRight="@dimen/edits_margin"
            android:layout_marginTop="@dimen/showitem_topMargin"
            android:layout_weight="0.1"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/edits_margin">

                <TextView
                    style="@style/AppTheme.mytextviewstyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="2"
                    android:text="@string/contactdetail_name" />

                <TextView
                    android:id="@+id/contdetail_name"
                    style="@style/AppTheme.mytextviewstyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/edits_margin">

                <TextView
                    style="@style/AppTheme.mytextviewstyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/contactdetail_number" />

                <TextView
                    android:id="@+id/contdetail_email"
                    style="@style/AppTheme.mytextviewstyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.mytextviewstyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contactdetail_bands" />

                <ExpandableListView
                    android:id="@+id/contdetail_bandlist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/showitem_margin"
        app:layout_anchor="@id/viewA"
        app:layout_anchorGravity="bottom|left|end">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_showcontact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            fab:fab_label="@string/title_EquipEditorActivity_crItem"
            fab:fab_size="mini" />


    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>